# LiLo

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.7747d30  README.md  about.cpp  about.ui  clock.cpp  clock.hpp  clock.ui  databasesupport.cpp  databasesupport.hpp  enterreceiver.cpp  enterreceiver.hpp  iclocktick.hpp  lilo.rc  log.sql  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  qsotablemodel.cpp  qsotablemodel.hpp  qsotablemodelitem.cpp  qsotablemodelitem.hpp  resources.qrc  singlelinelabel.cpp  singlelinelabel.hpp  timestampdelegate.cpp  timestampdelegate.hpp  version.hpp.in
db/: country.xml  mysql.sql
res/: world.xcf
